--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-appointment-picker": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-timezone-select": "^2.1.0",
     "react-toastify": "^9.1.2",
+    "sass": "^1.62.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
@@ -40,5 +42,6 @@
       "YOUR_TEMPLATE_ID",
       "YOUR_SERVICE_ID"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
