--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite && react-dotenv && react-scripts start",
+    "start": "vite && react-dotenv && react-scripts start --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
