--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite && react-dotenv && react-scripts start --host",
+    "dev": "vite && react-dotenv && react-scripts start --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@aldabil/react-scheduler": "^2.7.8",
     "@emailjs/browser": "^3.11.0",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.4",
     "axios": "^1.3.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
